[package]
name = "xo-core"
version = "0.2.0-alpha"
edition = "2024"
rust-version = "1.88"
authors = ["Allie72phe <alliephenish@gmail.com>"]
description = "A fast, reusable, and well-documented game engine for Tic-Tac-Toe (Noughts and Crosses) in Rust"
repository = "https://github.com/Allie72-Aur/xo-core"
license = 'MIT'
readme = "README.md"
documentation = "https://docs.rs/xo-core"
keywords = ["xo", "tic-tac-toe", "noughts-and-crosses", "game", "minimax"]
categories = ["games", "algorithms"]
include = ["src/", "LICENSE", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3 # Maximum optimization level for performance
debug = false # Disable debug info for smaller binaries
lto = "fat"   # Enable Link-Time Optimization for cross-crate optimization
codegen-units = 1 # Reduce code generation units for potentially better optimization, but slower compile times
panic = "abort" # Optimize for size by aborting on panic, instead of unwinding

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
